--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "update": "bun update karabiner.ts"
   },
   "devDependencies": {
-    "@types/node": "^20.1.3",
-    "karabiner.ts": "latest",
-    "prettier": "^2.8.7",
+    "@types/node": "^22.7.4",
+    "karabiner.ts": "^1.30.0",
+    "prettier": "^3.3.3",
     "tsx": "^4.19.1",
-    "typescript": "^5.0.4"
+    "typescript": "^5.6.2"
   }
 }
